--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     width: 100%;
     position: fixed;
     z-index: 999;
-    background-color: #0b0b0b;
+    background-color: #030303;
     padding: 25vh 10vw;
     
   }
@@ -55,14 +55,52 @@
  
   }
   .line h2{
-    font-size: 6.5vw;
+    font-size: 4.5vw;
     text-transform: uppercase;
     font-weight: 900;
+    opacity: 0;
+  
+    animation-duration: 1.3s;
+    animation-iteration-count: infinite;
+  }
+  @keyframes anime {
+    0%{
+      font-family:"plain light";
+      -webkit-text-stroke: 1px #fff;
+      color: #fff;
+      font-weight: 500;
+      opacity: 1;
+    }
+    48%{
+      font-family: "silk serif";
+      -webkit-text-stroke: 1px #fff;
+      color:transparent ;
+       font-weight: 500;
+       opacity: 0;
+
+    }
+    50%{
+      font-family: "silk serif";
+      -webkit-text-stroke: 1px #fff;
+      color:transparent ;
+       font-weight: 500;
+       opacity: 1;
+
+    }
+    100%{
+      font-family: "silk serif";
+      -webkit-text-stroke: 1px #fff;
+      color:transparent ;
+       font-weight: 500;
+       opacity: 0;
+
+    }
+    
   }
 
   #main{
     position: relative;
-    background-color: #111;
+    background-color: #030303;
   }
   #page1{
     height: 100vh;
